[gd_scene load_steps=35 format=3 uid="uid://cvsftdpu2pmus"]

[ext_resource type="PackedScene" uid="uid://cmqq5tee3t843" path="res://prefabs/UpgradeNode.tscn" id="1_db6p7"]
[ext_resource type="Script" uid="uid://do5jhdpambdu" path="res://scripts/upgrades_scene.gd" id="1_o3c8l"]
[ext_resource type="Theme" uid="uid://du2jkyh4el8aw" path="res://ui/GameSceneTheme.tres" id="2_hunyf"]
[ext_resource type="LabelSettings" uid="uid://dcrxj6ropvsma" path="res://ui/LabelSettings/GameUILabelSettings.tres" id="2_sqcr3"]
[ext_resource type="Texture2D" uid="uid://cx5d7o87htngs" path="res://icons/sword.png" id="3_x5oev"]
[ext_resource type="LabelSettings" uid="uid://cpd6oxhesfn23" path="res://ui/LabelSettings/GameUISmallLabel.tres" id="4_1qsbe"]
[ext_resource type="Script" uid="uid://cik52rhd1w27g" path="res://scripts/button_shaker.gd" id="4_jtjne"]
[ext_resource type="Script" uid="uid://bttbimes54k4a" path="res://scripts/ui_shaker.gd" id="4_os0qy"]
[ext_resource type="Texture2D" uid="uid://cgngbhqswoxqc" path="res://icons/ticket.png" id="4_yxxwd"]
[ext_resource type="Texture2D" uid="uid://bak7a3w4dnkou" path="res://icons/extra-balls.png" id="8_42ycr"]
[ext_resource type="Texture2D" uid="uid://d21285ecfpxf7" path="res://customer.png" id="8_jwdw3"]
[ext_resource type="Texture2D" uid="uid://b3rwrf5e1p7i4" path="res://icons/auto-dropper-down.png" id="8_x5oev"]
[ext_resource type="Texture2D" uid="uid://x1g18ke04r4f" path="res://icons/potatochip_green.png" id="9_qk3q1"]
[ext_resource type="Texture2D" uid="uid://ctp2mcn56qkna" path="res://icons/decor.png" id="10_iypik"]
[ext_resource type="Texture2D" uid="uid://kmk6lsjoka3u" path="res://icons/bronzeballs.png" id="10_t60i8"]
[ext_resource type="Texture2D" uid="uid://djipi0a1i21ru" path="res://icons/silverballs.png" id="11_aoq7x"]
[ext_resource type="Texture2D" uid="uid://cl7hijhhqyo6c" path="res://icons/pegs-prize-amount.png" id="11_mgk3p"]
[ext_resource type="Texture2D" uid="uid://clvs23glv334r" path="res://icons/vip.png" id="11_s5gr3"]
[ext_resource type="Texture2D" uid="uid://jris4ysmxbms" path="res://icons/goldballs.png" id="12_1lmaf"]
[ext_resource type="Texture2D" uid="uid://bdis3c3http3j" path="res://icons/shiny-balls.png" id="12_85hqe"]
[ext_resource type="Texture2D" uid="uid://cayah2v38qk1l" path="res://icons/new-machines.png" id="12_o53fm"]
[ext_resource type="Texture2D" uid="uid://bo05trpdo44vu" path="res://icons/diamondballs.png" id="13_qk3q1"]
[ext_resource type="Texture2D" uid="uid://bb0epj3jqdvo3" path="res://icons/platballs.png" id="14_iypik"]
[ext_resource type="Texture2D" uid="uid://ds760r6rvdyq4" path="res://icons/bronze-balls-effect-pegs.png" id="15_o75u6"]
[ext_resource type="Texture2D" uid="uid://cihdt41avsnfo" path="res://icons/pegs-can-have-prizes.png" id="16_6mg3w"]
[ext_resource type="Texture2D" uid="uid://2n66gux860ds" path="res://icons/pegs-prize-claimed-amount.png" id="18_o85pm"]
[ext_resource type="Texture2D" uid="uid://cuhxy3yehhxut" path="res://icons/gold-balls-effect-pegs.png" id="20_jjanr"]
[ext_resource type="Texture2D" uid="uid://c3c21yjnphnkg" path="res://icons/plat-balls-effect-pegs.png" id="20_o85pm"]
[ext_resource type="Texture2D" uid="uid://bpq1t3w1w75cn" path="res://icons/silver-balls-effect-pegs.png" id="20_sdi2j"]
[ext_resource type="Texture2D" uid="uid://cripu4bhuf1qf" path="res://icons/diamond-balls-effect-pegs.png" id="21_yxxwd"]
[ext_resource type="Texture2D" uid="uid://cm2qtqr3qqv1j" path="res://icons/max-tokens.png" id="23_o85pm"]
[ext_resource type="StyleBox" uid="uid://c0y242nrsahb3" path="res://ui/DefaultBtnHover.tres" id="33_hkxu2"]
[ext_resource type="PackedScene" uid="uid://u7v0v200hk8j" path="res://prefabs/prestige_warning.tscn" id="36_e3ule"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkxu2"]
content_margin_left = 30.0
content_margin_top = 35.0
content_margin_right = 30.0
content_margin_bottom = 35.0
bg_color = Color(0.894118, 0, 0, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 1, 1, 1)
corner_detail = 1

[node name="Upgrades" type="Node2D"]
script = ExtResource("1_o3c8l")

[node name="UpgradeNodes2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 960.0
offset_top = 538.0
offset_right = 2460.0
offset_bottom = 1338.0
mouse_filter = 1

[node name="DmgUpV1" parent="UpgradeNodes2" instance=ExtResource("1_db6p7")]
upgrade = 38
texture = ExtResource("3_x5oev")

[node name="MaxBallBounceV1" parent="UpgradeNodes2/DmgUpV1" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 2
texture = ExtResource("8_42ycr")

[node name="ShotDelayV1" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 34
texture = ExtResource("8_x5oev")

[node name="BronzeBalls" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 11
texture = ExtResource("10_t60i8")

[node name="BronzeBallsEffectPegs" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1/BronzeBalls" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 23
texture = ExtResource("15_o75u6")

[node name="SilverBalls" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1/BronzeBalls" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 12
texture = ExtResource("11_aoq7x")

[node name="GoldBalls" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1/BronzeBalls/SilverBalls" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 13
texture = ExtResource("12_1lmaf")

[node name="DiamondBalls" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1/BronzeBalls/SilverBalls/GoldBalls" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 14
texture = ExtResource("13_qk3q1")

[node name="PlatBalls" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1/BronzeBalls/SilverBalls/GoldBalls/DiamondBalls" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 15
texture = ExtResource("14_iypik")

[node name="PlatBallsEffectPegs" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1/BronzeBalls/SilverBalls/GoldBalls/DiamondBalls/PlatBalls" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 27
texture = ExtResource("20_o85pm")

[node name="DiamondBallsEffectPegs" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1/BronzeBalls/SilverBalls/GoldBalls/DiamondBalls" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 26
texture = ExtResource("21_yxxwd")

[node name="GoldBallsEffectPegs" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1/BronzeBalls/SilverBalls/GoldBalls" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 25
texture = ExtResource("20_jjanr")

[node name="SilverBallsEffectPEgs" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/ShotDelayV1/BronzeBalls/SilverBalls" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 24
texture = ExtResource("20_sdi2j")

[node name="MaxBallBounceV2" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 52
texture = ExtResource("8_42ycr")

[node name="PegsCanHavePrizes" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/MaxBallBounceV2" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 4
texture = ExtResource("16_6mg3w")

[node name="PegsCanHavePrizes2" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/MaxBallBounceV2/PegsCanHavePrizes" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 5
texture = ExtResource("11_mgk3p")

[node name="PrizesCanBeClaimedXTimesPerPeg" parent="UpgradeNodes2/DmgUpV1/MaxBallBounceV1/MaxBallBounceV2/PegsCanHavePrizes" instance=ExtResource("1_db6p7")]
position = Vector2(0, 120)
upgrade = 7
texture = ExtResource("18_o85pm")

[node name="PickupRadiusV1" parent="UpgradeNodes2/DmgUpV1" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 44
texture = ExtResource("8_42ycr")

[node name="Customers" parent="UpgradeNodes2/DmgUpV1" instance=ExtResource("1_db6p7")]
position = Vector2(-120, 120)
upgrade = 3
texture = ExtResource("8_jwdw3")

[node name="Free Snacks" parent="UpgradeNodes2/DmgUpV1/Customers" instance=ExtResource("1_db6p7")]
position = Vector2(0, 120)
upgrade = 17
texture = ExtResource("9_qk3q1")

[node name="DecorUpgrade" parent="UpgradeNodes2/DmgUpV1/Customers/Free Snacks" instance=ExtResource("1_db6p7")]
position = Vector2(-120, 0)
upgrade = 18
texture = ExtResource("10_iypik")

[node name="VipLounge" parent="UpgradeNodes2/DmgUpV1/Customers/Free Snacks/DecorUpgrade" instance=ExtResource("1_db6p7")]
position = Vector2(-120, 0)
upgrade = 20
texture = ExtResource("11_s5gr3")

[node name="ShinyBalls" parent="UpgradeNodes2/DmgUpV1/Customers/Free Snacks/DecorUpgrade/VipLounge" instance=ExtResource("1_db6p7")]
position = Vector2(-120, 0)
upgrade = 21
texture = ExtResource("12_85hqe")

[node name="New Machines" parent="UpgradeNodes2/DmgUpV1/Customers/Free Snacks/DecorUpgrade/VipLounge/ShinyBalls" instance=ExtResource("1_db6p7")]
position = Vector2(-120, 0)
upgrade = 22
texture = ExtResource("12_o53fm")

[node name="MaxTokens" parent="UpgradeNodes2/DmgUpV1/Customers" instance=ExtResource("1_db6p7")]
position = Vector2(-120, 0)
upgrade = 28
texture = ExtResource("23_o85pm")

[node name="LevelTimeUpV1" parent="UpgradeNodes2/DmgUpV1" instance=ExtResource("1_db6p7")]
position = Vector2(-120, 0)
upgrade = 39
texture = ExtResource("8_x5oev")

[node name="PegsDestoryedAddsLevelTimeV1" parent="UpgradeNodes2/DmgUpV1/LevelTimeUpV1" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 42
texture = ExtResource("11_mgk3p")

[node name="PegsDestoryedAddsLevelTimeV2" parent="UpgradeNodes2/DmgUpV1/LevelTimeUpV1/PegsDestoryedAddsLevelTimeV1" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 40
texture = ExtResource("8_x5oev")

[node name="ShotDelayV2" parent="UpgradeNodes2/DmgUpV1/LevelTimeUpV1/PegsDestoryedAddsLevelTimeV1" instance=ExtResource("1_db6p7")]
position = Vector2(-120, 0)
upgrade = 50
texture = ExtResource("8_x5oev")

[node name="ShotDelayV3" parent="UpgradeNodes2/DmgUpV1/LevelTimeUpV1/PegsDestoryedAddsLevelTimeV1/ShotDelayV2" instance=ExtResource("1_db6p7")]
position = Vector2(0, -120)
upgrade = 51
texture = ExtResource("8_x5oev")

[node name="ShotDelayV4" parent="UpgradeNodes2/DmgUpV1/LevelTimeUpV1/PegsDestoryedAddsLevelTimeV1/ShotDelayV2/ShotDelayV3" instance=ExtResource("1_db6p7")]
position = Vector2(-120, 0)
upgrade = 43
texture = ExtResource("11_mgk3p")

[node name="ShotDelayV5" parent="UpgradeNodes2/DmgUpV1/LevelTimeUpV1/PegsDestoryedAddsLevelTimeV1/ShotDelayV2/ShotDelayV3/ShotDelayV4" instance=ExtResource("1_db6p7")]
position = Vector2(0, 120)
upgrade = 53
texture = ExtResource("8_x5oev")

[node name="AttackDmgV2" parent="UpgradeNodes2/DmgUpV1" instance=ExtResource("1_db6p7")]
position = Vector2(0, 123)
upgrade = 47
texture = ExtResource("3_x5oev")

[node name="CritChanceV1" parent="UpgradeNodes2/DmgUpV1/AttackDmgV2" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 48
texture = ExtResource("3_x5oev")

[node name="CritChanceV2" parent="UpgradeNodes2/DmgUpV1/AttackDmgV2/CritChanceV1" instance=ExtResource("1_db6p7")]
position = Vector2(120, 0)
upgrade = 49
texture = ExtResource("3_x5oev")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
theme = ExtResource("2_hunyf")

[node name="PrestigeWarning" parent="UI" instance=ExtResource("36_e3ule")]
visible = false
layout_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="UI"]
layout_mode = 1
offset_right = 1920.0
offset_bottom = 150.0

[node name="Label" type="Label" parent="UI/CenterContainer"]
layout_mode = 2
text = "UPGRADES"
label_settings = ExtResource("2_sqcr3")

[node name="CenterContainer5" type="CenterContainer" parent="UI"]
layout_mode = 1
offset_left = 34.0
offset_top = 159.0
offset_right = 539.0
offset_bottom = 383.0

[node name="Control" type="Control" parent="UI/CenterContainer5"]
layout_mode = 2

[node name="PrestigeBtn" type="Button" parent="UI/CenterContainer5/Control"]
layout_mode = 2
offset_left = -198.0
offset_top = -85.0
offset_right = 197.0
offset_bottom = 85.0
pivot_offset = Vector2(194, 78)
mouse_default_cursor_shape = 2
theme_override_styles/hover = ExtResource("33_hkxu2")
theme_override_styles/normal = SubResource("StyleBoxFlat_hkxu2")
text = "Prestige"
script = ExtResource("4_jtjne")

[node name="Label" type="Label" parent="UI/CenterContainer5/Control/PrestigeBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -35.0
offset_right = 147.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
text = "Prestige"
label_settings = ExtResource("2_sqcr3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shaker" type="Control" parent="UI/CenterContainer5/Control/PrestigeBtn" node_paths=PackedStringArray("target")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_os0qy")
target = NodePath("..")

[node name="CenterContainer2" type="CenterContainer" parent="UI"]
layout_mode = 1
offset_left = 1.0
offset_top = 860.0
offset_right = 1921.0
offset_bottom = 1079.0

[node name="Control" type="Control" parent="UI/CenterContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="UI/CenterContainer2/Control"]
layout_mode = 2
offset_left = -198.0
offset_top = -85.0
offset_right = 197.0
offset_bottom = 85.0
pivot_offset = Vector2(194, 78)
mouse_default_cursor_shape = 2
text = "PACHINKO!"
script = ExtResource("4_jtjne")

[node name="Label" type="Label" parent="UI/CenterContainer2/Control/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -35.0
offset_right = 147.5
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
text = "PACHINKO!"
label_settings = ExtResource("2_sqcr3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shaker" type="Control" parent="UI/CenterContainer2/Control/Button" node_paths=PackedStringArray("target")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_os0qy")
target = NodePath("..")

[node name="CenterContainer3" type="CenterContainer" parent="UI"]
layout_mode = 0
offset_left = 239.0
offset_top = 860.0
offset_right = 759.0
offset_bottom = 1079.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CenterContainer3"]
layout_mode = 2

[node name="MoneyLabel" type="Label" parent="UI/CenterContainer3/HBoxContainer"]
layout_mode = 2
text = "$000m"
label_settings = ExtResource("4_1qsbe")

[node name="MoneyPerSecond" type="Label" parent="UI/CenterContainer3/HBoxContainer"]
layout_mode = 2
text = "[$0 / sec]"
label_settings = ExtResource("4_1qsbe")

[node name="CenterContainer4" type="CenterContainer" parent="UI"]
layout_mode = 0
offset_left = 1161.0
offset_top = 860.0
offset_right = 1681.0
offset_bottom = 1079.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CenterContainer4"]
layout_mode = 2

[node name="TokenLabel" type="Label" parent="UI/CenterContainer4/HBoxContainer"]
layout_mode = 2
text = "Tokens: 0/3"
label_settings = ExtResource("4_1qsbe")

[node name="TextureRect" type="TextureRect" parent="UI/CenterContainer4/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_yxxwd")

[node name="TextureRect2" type="TextureRect" parent="UI/CenterContainer4/HBoxContainer/TextureRect"]
modulate = Color(0, 0, 0, 1)
z_index = -1
layout_mode = 2
offset_top = 5.0
offset_right = 110.0
offset_bottom = 115.0
texture = ExtResource("4_yxxwd")
